--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,32 @@
+#add-item{
+    border: 2px solid #A3DADF;
+    max-width: 600px;
+}
+
+.inline{
+    display: inline;
+}
+
+
 .button{
-    margin-right: .5em;
+    margin: 0 .5em .5em 0;
+}
+
+.container{
+    background: white;
+    min-height: 100vh;
+}
+
+.jumbotron{
+    background: #A3DADF;
+    color: white;
+}
+
+form{
+    padding: .5em;
+    margin: .5em 0 1em 0;
+}
+
+body{
+    background-image: url("../images/background.jpg");
 }
