--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,13 @@
     max-width: 600px;
 }
 
+#char-remaining{
+    padding-left: 6px;
+}
+
 .button{
     margin: 0 .5em .5em 0;
+    width: 140px;
 }
 
 .container{
