--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 #add-item{
     border: 2px solid #A3DADF;
-    max-width: 600px;
+    max-width: 210px;
     margin: 1em 0 0 .5em;
 }
 
-#add-button{
-    width: 70px;
-    margin: 0 0 1em .5em;
+#add-button, #m{
+    width: 105px;
+    margin: 0 0 1em 1.25em;
 }
+
+#more-gifs-button{
+    margin: 0 0 1em .25em;
+}
+
 
 #char-remaining{
     padding-left: 6px;
