--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,6 @@
 }
 
 #favorites{
-    background: #A3DADF;
     margin: 0 .5em .5em 0;
     width: 140px;
 }
@@ -52,12 +51,21 @@
 }
 
 .title{
-    margin-bottom: 0;
+    margin-right: .25em;
     font-weight: bold;
+    display: inline;
 }
 
 .card{
     margin-bottom: 1em;
+}
+
+
+
+.unlike, .like{
+    padding: 0;
+    height: auto;
+    width: 26px;
 }
 
 img{
@@ -71,4 +79,10 @@ form{
 
 body{
     background-image: url("../images/background.jpg");
+}
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.eot');
+  src: url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.woff') format('woff'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
