--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     margin: 1em 0 0 .5em;
 }
 
-#add-button, #m{
+#add-button {
     width: 105px;
     margin: 0 0 1em 1.25em;
 }
@@ -60,8 +60,6 @@
     margin-bottom: 1em;
 }
 
-
-
 .unlike, .like{
     padding: 0;
     height: auto;
@@ -81,8 +79,3 @@ body{
     background-image: url("../images/background.jpg");
 }
 
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.eot');
-  src: url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.woff') format('woff'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('https://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
